# Web-Project-Back

./: .gitignore  README.md  dectetive.json  pyproject.toml  railway.json  requirements.tx  requirements.txt
backend/: requirements.txt
backend/backend/: settings.py  urls.py
backend/besto/migrations/: 0001_initial.py
backend/core/: api.py  crud.py  googleauthentication.py  models.py  permission.py  serializers.py  urls.py  utils.py  validations.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_admin_password_alter_user_password.py  0002_manager_customer.py  0002_rename_user_id_user_id.py  0003_remove_manager_rol_delete_customer_delete_manager.py  0003_user_is_active.py  0004_admin_is_active.py
backend/news/: models.py  urls.py  views.py
backend/news/migrations/: 0001_initial.py  0002_news_is_active.py  0003_alter_news_image.py  0004_alter_news_content_alter_news_title.py
backend/scraping/: pagination.py  urls.py  views.py
besto/: apps.py  models.py
